feat(order-service, product-service): implement Kafka-based order processing and inventory update
- Added Kafka producer in order-service to publish order.placed events
- Implemented Kafka consumer in product-service to handle order events
- Reduced product quantity after successful order placement
- Ensured stock consistency across services using event-driven architecture
- Improved decoupling between order and product services
- Added event payload (user, order, pricing, quantity details)
- Enhanced scalability and reliability using asynchronous communication